Add search form for flights in list.ejs
Added a search form for flights to the dashboard.

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -27,8 +28,23 @@
           <button class="btn btn-light btn-lg" data-bs-toggle="modal" data-bs-target="#addModal">
             <i class="fas fa-plus me-2"></i>Add Flight
           </button>
-          
         </div>
+      </div>
+    </div>
+  </div>
+
+  
+  <div class="container mt-4">
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <form action="/list" method="GET" class="mb-4">
+          <div class="input-group input-group-lg">
+            <input type="text" name="q" class="form-control" placeholder="Search flights by number, destination, airline, or airport..." value="<%= typeof req !== 'undefined' && req.query.q ? req.query.q : '' %>">
+            <button class="btn btn-primary" type="submit">
+              <i class="fas fa-search"></i> Search
+            </button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
